RavenDB-5269 notifications overflow fix

--- a/src/Raven.Studio/wwwroot/Content/css/checkbox-toggle.less
+++ b/src/Raven.Studio/wwwroot/Content/css/checkbox-toggle.less
@@ -72,7 +72,7 @@
 .checkbox, .radio {
     input[type="checkbox"],
     input[type="radio"] {
-        width: @line-height-computed/4*3;
+        width: floor(@line-height-computed/4*3);
         height: @line-height-computed/4*3;
         position: relative;
         top: 6px;
