--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -667,6 +667,7 @@ hr {
         .resource-switcher-container, .search-container {
             position: relative;
             top: 2px;
+            padding-top: 5px;
 
             a {
                 color: @gray-lighter;
@@ -1575,6 +1576,7 @@ pre {
     position: absolute;
     width: @menu-width;
     top: @navbar-height-xs;
+    overflow-y:auto;
     right: 0;
     bottom: 0;
     padding: @grid-gutter-width / 8;
